--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </h1>
 
         <h2 class="sm-heading">
-            Data Engineer, Machine Learning Engineer, Software Developer, Web Developer & Programmer
+            Data Engineer, Machine Learning & NLP Engineer, Software & Web Developer
         </h2>
         <div class="icons">
             <a href="https://github.com/shrutikar">
