--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <a href="https://join.skype.com/invite/w6UuewtmHPCm">
                 <i class="fab fa-skype fa-2x"></i>
             </a>
-            <a href=https://twitter.com/shrutikar94">
+            <a href="https://twitter.com/shrutikar94">
                 <i class="fab fa-twitter fa-2x"></i>
             </a>
             <a href="https://www.facebook.com/shruti.kar1">
